tests/baselines/reference/moduleAndInterfaceWithSameName.errors.txt
moduleAndInterfaceWithSameName.ts(21,15): error TS2339: Property 'Bar' does not exist on type 'typeof Foo2'.


==== moduleAndInterfaceWithSameName.ts (1 errors) ====
    namespace Foo1 {
        export namespace Bar {
            export var x = 42;
        }
    
        export interface Bar { 
            y: string;
        }
    }
    
    namespace Foo2 {
        namespace Bar {
            export var x = 42;
        }
    
        export interface Bar {
            y: string;
        }
    }
    
    var z2 = Foo2.Bar.y; // Error for using interface name as a value.
                  ~~~
!!! error TS2339: Property 'Bar' does not exist on type 'typeof Foo2'.
    
    namespace Foo3 {
        export namespace Bar {
            export var x = 42;
        }
    
        interface Bar { 
            y: string;
        }
    }